减少警告，压缩体积